# lpj-preprocess

./: .gitignore  01-download-chelsa.sh  02-apply-land-mask.sh  03-chelsa-tif2nc.py  03-crop-amazon.sh  04-chelsa-tif2nc.py  04-combine-nc.sh  05-rename.py  06-combine-nc.sh  07-resample-land-soil.sh  README.md  bash_utils.sh  chelsa-amazon-grid  chelsa-paths-small.txt  chelsa-paths.txt  chelsa-tif2nc.py  combine-nc.sh  env.sh  extract-coords.py  get-coords.sh  pyproject.toml  submit-02.sh  submit-03.sh  submit-04.sh  submit-07.sh  zz-scratch.py
